# stolink_fastapi_image

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gitsecrets.md  pyproject.toml
.github/workflows/: deploy.yml  deploytest.yml  spring_delpoy.yml
app/: main.py
app/api/: __init__.py  routes.py
app/config/: __init__.py  settings.py
app/consumers/: __init__.py  image_consumer.py
app/graph/: __init__.py  image_graph.py
app/schemas/: __init__.py  image_task.py
app/services/: __init__.py  bedrock_service.py  callback_service.py  gemini_service.py  image_service.py  prompt_service.py  s3_service.py
test/: image_generation_test.ipynb  integration_test_with_s3.ipynb
tests/: test_health.py  test_upload.py
